--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -57,6 +57,9 @@ src="jquery.sparkline.min.js"></script>
 </li>
 
 <li class='footer'>
+Note due to a <a href="http://code.google.com/p/android/issues/detail?id=5001">Android SSL bug</a>, currently not runnig on SSL
+</li>
+<li class='footer'>
 Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </li>
 
