added real menu support to the app. Still Ugly, oh well.

--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -65,5 +65,17 @@ Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </div>
 </div>
 
+ 
+ <div id="menu" style="display:none;">
+   Fitbit Mini not associated with Fitbit, created by a fan,Dan
+ Mayer.
+   <hr/>
+   <a href="#" onClick="return menu();">Close Menu</a>
+   <br/>
+   <a href="#" onClick="menu(); BackButton.exitApp(); return
+ false;">Close App</a>
+ </div>
+
+
 </body>
 </html>
