first work towards adding accellerameter support

--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -60,6 +60,15 @@ src="jquery.sparkline.min.js"></script>
 Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </li>
 
+<li>
+<div id="accel-data">
+ x: <span id="x"></span>
+ y: <span id="y"></span>
+ z: <span id="z"></span>
+</div>
+</li>
+
+
 </div>
 </ul>
 </div>
