working accerometer display and working on pedometer code to see if it can even get an accurate count.

--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -65,6 +65,7 @@ Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
  x: <span id="x"></span>
  y: <span id="y"></span>
  z: <span id="z"></span>
+ steps: <span id="step"></span>
 </div>
 </li>
 
