oops I thought I had been checking this in in parts, but this is now just a massive checking that adds the ability to log food, requires the newest ruby-fitbit library

--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -38,12 +38,14 @@ src="jquery.sparkline.min.js"></script>
   <li><a href="/account" onClick="return accountGet();">Create Account or Login</a></li>
   </ul>
 
+<ul>
 
 
   <li>
   <a href="http://github.com/danmayer/fitbit-widget">Fitbit mini is open source</a>
   <br/>
   </li>
+</ul>
 
 
 <ul class="iphone-scroll">
@@ -60,7 +62,7 @@ src="jquery.sparkline.min.js"></script>
 Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </li>
 
-<li>
+<li class='footer'>
 <div id="accel-data">
  x: <span id="x"></span>
  y: <span id="y"></span>
