fixes for the autocomplete and android food push

--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script type="text/javascript" charset="utf-8" src="jquery-1.4.2.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="jquery.autocomplete.js"></script>
 <script type="text/javascript" charset="utf-8"
 src="jquery.sparkline.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="jquery.offline.js"></script>
@@ -16,7 +17,10 @@ src="jquery.sparkline.min.js"></script>
 
 <link rel="stylesheet" href="base.css" type="text/css" media="screen,projection">
 <meta name = "viewport" content = "width = device-width">
+<link rel="apple-touch-startup-image" href="/fitbitsplash.png" />
 <link rel="apple-touch-icon" href="/icon.png">
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<title>FitbitMini - mobile fitbit app</title>
 </head>
 
 <body onload="init();">
