--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -20,6 +20,7 @@ src="jquery.sparkline.min.js"></script>
 <link rel="apple-touch-startup-image" href="/fitbitsplash.png" />
 <link rel="apple-touch-icon" href="/icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="viewport" content="user-scalable=false, initial-scale=1.0, width=device-width" />
 <title>FitbitMini - mobile fitbit app</title>
 </head>
 
