preparing to test new android version on staging

--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -26,17 +26,17 @@ src="jquery.sparkline.min.js"></script>
 
 <body onload="init();">
 <div class="iphone-scrollcontainer">
-   <ul class="iphone-scroll">
+   <ul class="iphone-scroll afs-gentium-book-basic">
       <li>
         <div class="nav-indicator-fixed"></div>
-        <div class="nav-indicator">
-	  Fitbit Mini
+        <div class="nav-indicator afs-ubuntu topnav">
+	  <h5>Fitbit Mini</h5>
 	  <span id="loading" style="display:none">
 	  <img src="spinner.gif"
 	  alt="loading..." /></span>
         </div>
-<div id="content">
-  <ul>
+	<div id="content">
+	    <ul>
   <li class="nohover">
           <a href="https://fitbit-widget.heroku.com/">Fitbit mini</a> is a simple way to view fitbit data. Embed it in a blog, or for mobile friendly viewing. Fitbit mini, isn't assocaited with <a href="http://fitbit.com">Fitbit</a> in any way, just a fan.
         </li> 
@@ -52,10 +52,11 @@ src="jquery.sparkline.min.js"></script>
   </li>
 </ul>
 
-
-<ul class="iphone-scroll">
-<div id='footer'>
-<!-- needs to check if account valid not just account --!>
+  
+	  <ul class="iphone-scroll">
+	    <div id='footer' class='afs-charis-sil'>
+	      <!-- needs to check if account valid not just account --!>
+<div class="bottomcurve">
 <li class='footer'>
 
 <a href="/" onclick="return getHome('/')">home</a>
@@ -67,10 +68,11 @@ src="jquery.sparkline.min.js"></script>
 Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </li>
 
+</div>
 
-</div>
-</ul>
-</div>
+	    </div>
+	  </ul>
+	</div>
 </div>
 
  
