prepping new android app release to test against staging

--- a/phonegap-android/assets/www/index.html
+++ b/phonegap-android/assets/www/index.html
@@ -30,10 +30,10 @@ src="jquery.sparkline.min.js"></script>
       <li>
         <div class="nav-indicator-fixed"></div>
         <div class="nav-indicator afs-ubuntu topnav">
-	  <h5>Fitbit Mini</h5>
+	  <h5>Fitbit Mini
 	  <span id="loading" style="display:none">
 	  <img src="spinner.gif"
-	  alt="loading..." /></span>
+	  alt="loading..." /></span></h5>
         </div>
 	<div id="content">
 	    <ul>
